# canokey-crypto

./: .coveralls.yml  .gitignore  .gitmodules  CMakeLists.txt  README.md  mbedtls-apple.patch  mbedtls-ed25519.patch  memzero.h  sha2.c  sha2.h  tf-psa-crypto-ed25519.patch
.github/workflows/: tests.yml
cmake/Modules/: AddMockedTest.cmake
ed25519-donna/: curve25519-donna-32bit.c  curve25519-donna-32bit.h  curve25519-donna-helpers.c  curve25519-donna-helpers.h  curve25519-donna-scalarmult-base.c  ed25519-donna-32bit-tables.c  ed25519-donna-32bit-tables.h  ed25519-donna-impl-base.c  ed25519-donna-impl-base.h  ed25519-donna-portable.h  ed25519-donna.h  ed25519-hash.c  ed25519-hash.h  ed25519.c  modm-donna-32bit.c  modm-donna-32bit.h
include/: aes.h  algo.h  block-cipher.h  crc.h  crypto-define.h  crypto-util.h  cv25519.h  des.h  ecc.h  ecdsa.h  ed25519.h  hmac.h  memzero.h  ml-dsa-65.h  ml-kem-768.h  rand.h  rsa.h  sha.h  sha3.h  sm3.h
src/: CMakeLists.txt  aes-generic.c  aes-generic.h  aes.c  aes.h  algo.c  bignum.c  bignum.h  block-cipher.c  block-cipher.h  crc.c  crypto-util.c  crypto-util.h  cv25519.c  des.c  ecc.c  ecdsa-generic.c  ecdsa-generic.h  ecdsa.c  ecdsa.h  ed25519.c  hmac.c  keccak_p1600.c  memzero.c  ml-dsa-65.c  ml-kem-768.c  nist256p1.c  rand.c  rand.h  rsa.c  secp256k1.c  secp256k1.h  sha.c  sha2-generic.c  sha2-generic.h  sha2.c  sha2.h  sha3.c  sha3.h  sm3.c  (+2 more)
test/: CMakeLists.txt  ECDSA-data.nb  ecdsa-generic.c  nist256p1.c  nist256p1.h  test_25519.c  test_aes.c  test_des.c  test_ecdsa.c  test_hmac.c  test_ml_kem_768.c  test_rsa.c  test_sha.c  test_sha2.c  test_sha3.c  test_sha3_random.c
